# Maix-Agent

./: .build.bat  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Construction.md  Dockerfile  LICENSE  README.ai.md  README.md  README_zh-CN.ai.md  README_zh-CN.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
config/: default.toml  settings-default.md  system.toml
crates/maix-agent/: Cargo.toml
crates/maix-agent/assets/: system_prompt.md
crates/maix-agent/src/: bookmarks.rs  branching.rs  chain.rs  commands.rs  compaction.rs  context.rs  export.rs  hooks.rs  init.rs  lib.rs  maix_md.rs  orchestrator.rs  planner.rs  reasoning.rs  recovery.rs  reflection.rs  router.rs  runtime.rs  session.rs  tool_selector.rs
crates/maix-cli/: Cargo.toml
crates/maix-cli/src/: cli.rs  doctor.rs  main.rs  update.rs
crates/maix-cli/src/commands/: ask.rs  identity.rs  memory.rs  mod.rs  server.rs  session.rs  skill.rs  system.rs  task.rs  tool.rs
crates/maix-core/: Cargo.toml  build.rs
crates/maix-core/src/: architecture.rs  auto_launch.rs  client.rs  config.rs  config_validator.rs  conversions.rs  credentials.rs  error.rs  events.rs  health.rs  i18n.rs  identity.rs  lib.rs  logging.rs  model_router.rs  notify.rs  perf.rs  permissions.rs  plugin.rs  tokenizer.rs  traits.rs  types.rs  update.rs  util.rs
crates/maix-db/: Cargo.toml
crates/maix-db/src/: lib.rs
crates/maix-gateway/: Cargo.toml
crates/maix-gateway/src/: main.rs
crates/maix-gateway/src/bridges/: feishu.rs  mod.rs  telegram.rs
crates/maix-memory/: Cargo.toml
crates/maix-memory/src/: compaction.rs  embedding.rs  importance.rs  lib.rs  retrieval.rs  semantic.rs
crates/maix-monitor/: Cargo.toml
crates/maix-monitor/src/: audit.rs  event_bus.rs  lib.rs  perf.rs
crates/maix-provider/: Cargo.toml
crates/maix-provider/src/: anthropic.rs  cache.rs  chain.rs  lib.rs  openai_compat.rs  rate_limiter.rs  registry.rs  stream.rs  traits.rs
crates/maix-server/: Cargo.toml
crates/maix-server/src/: architecture.rs  chat_stream.rs  client_launcher.rs  collaboration.rs  daemon.rs  main.rs  server.rs  service.rs  session_manager.rs  shutdown.rs  transport.rs
crates/maix-skills/: Cargo.toml
crates/maix-skills/src/: lib.rs  loader_registry.rs  manifest.rs  registry.rs  sandbox.rs  scheduler.rs
crates/maix-skills/src/loaders/: bash_loader.rs  exe_loader.rs  md_loader.rs  mod.rs  rust_loader.rs
crates/maix-task-queue/: Cargo.toml
crates/maix-task-queue/src/: lib.rs
crates/maix-tools/: Cargo.toml
crates/maix-tools/src/: ast.rs  background.rs  batch.rs  cache_stats.rs  collaboration.rs  coverage.rs  data.rs  deps.rs  diff_utils.rs  event_log.rs  file_lock.rs  formatter.rs  fs.rs  git.rs  indexer.rs  info.rs  lib.rs  lsp.rs  multi_edit.rs  network.rs  profiler.rs  review.rs  sandbox.rs  scheduler.rs  security.rs  shell.rs  side_git.rs  sub_agent.rs  tasks.rs  templates.rs  test_runner.rs  undo.rs  workflow.rs  worktree.rs
crates/maix-tools/src/builtin/: data.rs  fs.rs  info.rs  mod.rs  search.rs  shell.rs  user.rs
crates/maix-tools/src/lsp/: client.rs  manager.rs  mod.rs  tools.rs
crates/maix-tools/src/mcp/: bridge.rs  client.rs  mod.rs  server.rs  transport.rs  types.rs
crates/maix-tui/: Cargo.toml
crates/maix-tui/src/: app.rs  clipboard.rs  config_wizard.rs  desk.rs  diff_view.rs  git_status.rs  highlight.rs  input.rs  layout.rs  main.rs  notify.rs  palette.rs  pane.rs  status_bar.rs  stream_renderer.rs  ui.rs  vim.rs
crates/maix-tui/src/app/: helpers.rs  init.rs  mod.rs  navigation.rs  state.rs  streaming.rs
crates/maix-tui/src/input/: commands.rs  mod.rs
crates/maix-tui/src/ui/: markdown.rs  mod.rs  theme.rs
docs/: fix_plan.md  update_plan.md  usage.md
memory/: codes.md
proto/: agent.proto  common.proto  maix.proto  memory.proto  session.proto  skill.proto  task.proto  tool.proto
scripts/: bunbuild-backend-solo-windows_x64.mjs  bunbuild-tui-shell-windows_x64.mjs  bunbuild-tui-with-backend-windows_x64.mjs  esbuild-backend-solo.mjs  esbuild-tui-shell.mjs  esbuild-tui-with-backend.mjs
src/backend/agent/: agent.ts  context.ts  identity.ts  index.ts  memory.ts  modes.ts  multi-agent.ts  session.ts  skill.ts  sql-wasm-embedded.ts  task-queue.ts  topology.ts
src/backend/core/: config.ts  errors.ts  event-bus.ts  index.ts  logger.ts  types.ts
src/backend/mcp/: client.ts  types.ts
src/backend/monitor/: ws.ts
src/backend/provider/: anthropic.ts  base.ts  index.ts  openai.ts  registry.ts  router.ts
src/backend/tools/: base.ts  file-system.ts  index.ts  registry.ts  search.ts  shell.ts
src/tui/: app.ts  main.ts  terminal.ts
src/tui/api/: http.ts  index.ts  local.ts  types.ts  ws.ts
src/tui/panels/: status.ts
src/tui/themes/: index.ts
src/tui/types/: terminal-kit.d.ts
src/tui/utils/: keybindings.ts  markdown.ts
