[package]
name = "maix-cli"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "maix-cli"
path = "src/main.rs"

[dependencies]
maix-core.workspace = true
maix-agent.workspace = true
maix-skills.workspace = true
reqwest.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }
atty = "0.2"
home = "0.5"
