[package]
name = "maix-core"
version = "0.1.4"
edition = "2021"

[dependencies]
figment.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tokio.workspace = true
regex = "1"
tokio-stream.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build.workspace = true
