[package]
name = "maix-gateway"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "maix-gateway"
path = "src/main.rs"

[dependencies]
maix-core.workspace = true
tonic.workspace = true
clap.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
async-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
