[package]
name = "maix-memory"
version = "0.1.2"
edition = "2021"

[dependencies]
maix-core.workspace = true
maix-db.workspace = true
maix-provider.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
