[package]
name = "maix-skills"
version = "0.1.3"
edition = "2021"

[dependencies]
maix-core.workspace = true
maix-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
chrono.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
