[package]
name = "maix-tools"
version = "0.1.2"
edition = "2021"

[dependencies]
maix-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing.workspace = true
toml.workspace = true
glob = "0.3"
regex = "1"
chrono.workspace = true
base64 = "0.22"
urlencoding = "2"
uuid.workspace = true
home = "0.5"

[dev-dependencies]
tempfile = "3"
