[package]
name = "maix-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "maix-tui"
path = "src/main.rs"

[dependencies]
maix-core.workspace = true
tonic.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
uuid = { version = "1", features = ["v4"] }
