[package]
name = "maix-tui"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "maix-tui"
path = "src/main.rs"

[dependencies]
maix-core.workspace = true
maix-agent.workspace = true
tonic.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
futures.workspace = true
chrono.workspace = true
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
