[package]
name = "maix-tui"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "maix-tui"
path = "src/main.rs"

[dependencies]
maix-core.workspace = true
maix-agent.workspace = true
tonic.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
